--- a/DemoView/DemoTemplates/templates/insert.html
+++ b/DemoView/DemoTemplates/templates/insert.html
@@ -38,6 +38,7 @@
                 <td>{{ book.title }}</td>
                 <td>{{ book.author }}</td>
                 <td><a href="editBook/{{ book.id }}/">Edit</a></td>
+                <td><a href="deleteBook/{{ book.id }}/">Delete</a></td>
             </tr>
 
             {% endfor %}
