--- a/DemoView/DemoTemplates/templates/index.html
+++ b/DemoView/DemoTemplates/templates/index.html
@@ -6,9 +6,7 @@
     <title>Demo</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <a href="page2/">Go to page 2</a>
-
+    <h1>CRUD Operations</h1>
 
     <form action="save/" method="post">
         {% csrf_token %}
